# tech-article-fetcher

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  plan-2.md  pyproject.toml  requirements.txt  spec.md  todo.md
.claude/: keybindings.json  settings.json  settings.local.json
.claude/skills/: tf-cf-import.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: daily-fetch.yml  dashboard-deploy.yml  pages.yml  type-drift.yml
cloudflare/src/: index.js
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/functions/: _middleware.ts
dashboard/scripts/: screenshot.mts
docs/: architecture.drawio  index.html  style.css
infrastructure/cloudflare/: .gitignore  index.js
infrastructure/terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
plan/: plan-1.md  plan-10.md  plan-11.md  plan-4.md  plan-5-1.md  plan-5-2.md  plan-6.md  plan-7.md  plan-8.md  plan-9.md  plan3.md
scripts/: gen_types.py
src/: __main__.py  config.py  main.py  models.py  runtime_config.py
src/cli/: main.py  seed.py
src/core/: config.py  constants.py  kv_keys.py  models.py  runtime_config.py
src/fetchers/: devto_fetcher.py  hacker_news_fetcher.py  qiita_fetcher.py  reddit_fetcher.py  rss_fetcher.py  speakerdeck_fetcher.py
src/notifier/: line_notifier.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfstate  terraform.tfvars.example  variables.tf
tests/: test_contract.py  test_fetchers.py  test_notifier.py  test_runtime_config.py  test_selector.py  test_settings.py
(+36 files in other folders)
